# cheap-deep-research

./: .gitignore  README.md  pyproject.toml
src/cheap_research/: __init__.py  __main__.py  config.py  tools.py
src/cheap_research/templates/: article.tex.j2  beamer.tex.j2
