[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cheap-research"
version = "0.1.0"
description = "Agentic AI assistant for research based on smolagents"
authors = [
    {name = "Juehang Qin"}
]
dependencies = [
    "smolagents[telemetry]>=1.12.0",
    "arize-phoenix>=1.0.0",
    "xdg-base-dirs>=6.0.1",
    "litellm>=1.64.0",
    "tomli-w>=1.0.0",
    "tomli>=2.0.1",
    "docstring_parser>=0.15",
]

requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
]

[project.scripts]
cheapresearch = "cheap_research.__main__:main"

[tool.setuptools]
packages = ["cheap_research"]
package-dir = {"cheap_research" = "src/cheap_research"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]